--- a/src/App.css
+++ b/src/App.css
@@ -48,3 +48,7 @@ input[type="datetime-local"]:focus {
   border-radius: 100%;
   animation: rotation 2s linear 0s infinite;
 }
+
+li a {
+  cursor: pointer;
+}
